syntax = "proto3";

package gateway.v1;
option go_package = "gitlab.ozon.dev/paksergey94/telegram-bot/proto/api;api";

import "google/api/annotations.proto";

service Report {
  rpc SendReport (SendReportIn) returns (SendReportOut) {
    option (google.api.http).get = "/sendReport";
  }
}

message SendReportIn {
  int64 userId = 1;
  string report = 2;
}

message SendReportOut {
  bool ok = 1;
}